# utility-belt

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: lib.rs  prelude.rs
src/grid/: bool_grid.rs  bordered_grid.rs  coordinate.rs  direction.rs  direction_set.rs  distance_grid.rs  grid2d.rs  mod.rs  save_to_image.rs
src/grid/transformations/: flip.rs  fold.rs  mirror.rs  mod.rs  replicate.rs  rotate.rs  unfold.rs  zoom.rs
src/hashing/: mod.rs
src/math/: gauss_jordan.rs  line_line_intersection.rs  madgrad.rs  mod.rs  modular.rs  union_find.rs
src/math/cumsum/: fenwick_tree.rs  mod.rs  prefix_sum.rs  sat.rs
src/math/polygons/: area.rs  mod.rs  point_in_polygon.rs
src/math/polynomials/: mod.rs
src/misc/: bitset.rs  cartesian_tree.rs  cmp_eq.rs  counter.rs  implicit_treap.rs  mod.rs  union_find.rs
src/optimization/: branch_and_bound.rs  mod.rs  nested_search.rs  nmcs.rs
src/parsing/: mod.rs
src/search/: astar.rs  beam.rs  bisect.rs  brents.rs  brfs.rs  dfs.rs  exponential_search.rs  mod.rs  rectangle.rs
src/search/pathfinding/: bfs.rs  mod.rs  uniform_cost_search.rs
src/spatial/: coordinate.rs  direction.rs  mod.rs
src/spatial/grid/: grid2d.rs  mod.rs  save_to_image.rs
src/spatial/grid/transformations/: flip.rs  fold.rs  mod.rs  replicate.rs  rotate.rs  unfold.rs  zoom.rs
src/spatial/grid/wrappers/: bool_grid.rs  mod.rs
