[package]
name = "utility-belt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
derive_more = "0.99.17"
glam = "0.24.2"
indoc = "2.0.4"
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
nom_locate = "4.2.0"
num = "0.4.1"
pathfinding = "4.6.0"
petgraph = "0.6.4"
radix-heap = "0.4.2"
rayon = "1.8.0"
rstest = "0.18.2"
tinyvec = { version = "1.6.0", features = ["alloc", "std"] }
