[package]
name = "utility-belt"
version = "0.2024.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul", "mul_assign"] }
glam = "0.29.2"
hsv = "0.1.1"
image = { version = "0.25.5", features = ["png"], default-features = false }
indoc = "2.0.5"
itertools = "0.13.0"
ndarray = "0.16.1"
num = "0.4.3"
num-modular = "0.6.1"
rstest = "0.23.0"
